--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.3.0'
     def room_version = "2.2.6"
 
     implementation "androidx.room:room-runtime:$room_version"
